// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should render RadioGroup 1`] = `
<div>
  <div
    class="radio-group-root"
  />
</div>
`;

exports[`RadioGroup should render RadioGroup with a selected value 1`] = `
<div>
  <div
    class="radio-group-root"
  >
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          checked=""
          class="custom-control-input"
          name="foo"
          type="radio"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="custom-control-label-text"
          >
            1
          </span>
        </span>
      </label>
    </div>
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          class="custom-control-input"
          name="foo"
          type="radio"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="custom-control-label-text"
          >
            2
          </span>
        </span>
      </label>
    </div>
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          class="custom-control-input"
          name="foo"
          type="radio"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="custom-control-label-text"
          >
            3
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup should render RadioGroup with children 1`] = `
<div>
  <div
    class="radio-group-root"
  >
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          class="custom-control-input"
          name="foo"
          type="radio"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="custom-control-label-text"
          >
            1
          </span>
        </span>
      </label>
    </div>
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          class="custom-control-input"
          name="foo"
          type="radio"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="custom-control-label-text"
          >
            2
          </span>
        </span>
      </label>
    </div>
    <div
      class="custom-control custom-radio"
    >
      <label>
        <input
          class="custom-control-input"
          name="foo"
          type="radio"
        />
        <span
          class="custom-control-label"
        >
          <span
            class="custom-control-label-text"
          >
            3
          </span>
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`RadioGroup.Option should render Option 1`] = `
<div>
  <div
    class="custom-control custom-radio"
  >
    <label>
      <input
        class="custom-control-input"
        type="radio"
      />
      <span
        class="custom-control-label"
      />
    </label>
  </div>
</div>
`;

exports[`RadioGroup.Option should render Option with value 1`] = `
<div>
  <div
    class="custom-control custom-radio"
  >
    <label>
      <input
        class="custom-control-input"
        type="radio"
      />
      <span
        class="custom-control-label"
      />
    </label>
  </div>
</div>
`;
